# atc

./: .env.example  .gitignore  .pr-body.md  .pre-commit-config.yaml  CLAUDE.md  CODE_STRUCTURE.md  Makefile  README.md  atc.db  atc.db-shm  atc.db-wal  config.yaml  pyproject.toml
.github/workflows/: release.yml
.venv2/: pyvenv.cfg
docs/: ANTI_PATTERNS.md  API.md  ARCHITECTURE.md  CODEBASE_MAP.md  CONTRIBUTING.md  DEVELOPMENT_RULES.md  FEATURES.md  HARD_RULES.md  MIGRATIONS.md  PATTERNS.md  RUNTIME_PROVIDER_GUARDRAILS.md  START_HERE.md  TESTING_RULES.md  codebase_map_backend.md  codebase_map_current_state.md  codebase_map_frontend.md  codebase_map_provider_runtime.md  codebase_map_tech_debt.md  leader_kickoff_recovery_plan.md  mcp.md  provider_acceptance_checklist.md  provider_cli_wrapper_spec.md  provider_implementation_map.md  provider_interface_contract.md  provider_onboarding.md  provider_runtime_contract_spec.md  provider_runtime_phase0_checklist.md  provider_runtime_refactor_plan.md  provider_subagent_contract.md  runtime_orchestration_phase0_baseline.md  runtime_orchestration_refactor_phases.md  runtime_truth_recovery_plan.md  service_model.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright-smoke-atc.mjs  playwright-tower-codex-flow.mjs  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
scripts/: atc-agent  build_app.sh  bump_version.sh  dev.sh  new_design_log.sh  new_migration.sh
src-tauri/: Cargo.toml  atc-server.spec  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_terminal_control.py
(+399 files in other folders)
