[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atc"
version = "0.1.0"
description = "Hierarchical AI orchestration platform — Tower → Leader → Ace"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "aiosqlite>=0.20.0",
    "psutil>=6.1.0",
    "pyyaml>=6.0.2",
    "sentry-sdk[fastapi]>=2.0.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
atc-server = "atc.api.app:main"
atc = "atc.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atc"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
